# sift

./: .gitignore  .goreleaser.yaml  LICENSE  Makefile  README.md  RELEASE.md  THIRD_PARTY_LICENSES.md  build.sh  go.mod  go.sum  install.ps1  install.sh  pyproject.toml  requirements.txt
.github/workflows/: release.yml
cmd/sift/: main.go
internal/config/: config.go
internal/fileop/: ops.go
internal/ocr/: count.go  embed.go  tesseract.go
internal/output/: json.go  progress.go  summary.go
internal/scanner/: image.go  video.go
openspec/changes/archive/2026-07-21-sift-polish-and-bundle/: .openspec.yaml  README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-21-sift-polish-and-bundle/specs/copy-mode/: spec.md
openspec/changes/archive/2026-07-21-sift-polish-and-bundle/specs/json-output/: spec.md
openspec/changes/archive/2026-07-21-sift-polish-and-bundle/specs/search-filter/: spec.md
openspec/changes/ship-sift/: .openspec.yaml  README.md  design.md  proposal.md  tasks.md
openspec/changes/sift-go-rewrite/: .openspec.yaml  README.md  design.md  proposal.md  tasks.md
openspec/changes/sift-go-rewrite/specs/go-cli/: spec.md
openspec/changes/sift-go-rewrite/specs/standalone-distribution/: spec.md
openspec/specs/copy-mode/: spec.md
openspec/specs/json-output/: spec.md
openspec/specs/search-filter/: spec.md
openspec/specs/standalone-distribution/: spec.md
sift/: __init__.py  __main__.py  _bundled.py  banner.py  cli.py  core.py  gui.py  installer.py  progress.py
(+1 files in other folders)
