[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sift"
dynamic = ["version"]
description = "Digital Document Sifter — OCR-based image/video text finder"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/anomalyco/sift"

[project.scripts]
sift = "sift.cli:run_cli"
sift-gui = "sift.gui:gui_main"

[tool.setuptools.dynamic]
version = { attr = "sift.__version__" }
